connect the project to a DB